--- a/avatar-editor/bower.json
+++ b/avatar-editor/bower.json
@@ -11,7 +11,8 @@
     "angular-sanitize": "^1.4.0",
     "angular-touch": "^1.4.0",
     "scrollmagic": "^2.0.5",
-    "gsap": "^1.18.4"
+    "gsap": "^1.18.4",
+    "angular-socialshare": "angularjs-socialshare#^2.1.5"
   },
   "devDependencies": {
     "angular-mocks": "^1.4.0"
