--- a/avatar-editor/bower.json
+++ b/avatar-editor/bower.json
@@ -12,8 +12,8 @@
     "angular-touch": "^1.4.0",
     "scrollmagic": "^2.0.5",
     "gsap": "^1.18.4",
-    "angular-socialshare": "angularjs-socialshare#^2.1.5",
-    "angular-translate": "^2.11.0"
+    "angular-translate": "^2.11.0",
+    "angular-socialshare": "angularjs-socialshare#^2.1.6"
   },
   "devDependencies": {
     "angular-mocks": "^1.4.0"
